[package]
name = "peerid-change-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
subxt = "0.33.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk.git", branch="s0me0ne/respawn-node" }
zombienet-orchestrator = { git = "https://github.com/paritytech/zombienet-sdk.git", branch="s0me0ne/respawn-node" }
#zombienet-sdk = { path = "../zombienet-sdk/crates/sdk" }
#zombienet-orchestrator = { path = "../zombienet-sdk/crates/orchestrator" }
clap = { version = "4.5.3", features = ["derive"] }
